# python-polling

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  samconfig.toml  template.yaml
.github/workflows/: build.yaml  unit-tests.yaml
docs/: README.md
lambda_layer/: Makefile
tests/: .coveragerc  __setup__.py  conftest.py  test___init__.py  test_backoff.py  test_exceptions.py  test_polling.py  test_step.py
tests/events/backoff/: 0101-backoff_linear-success.json  0102-backoff_linear-success.json  0201-backoff_exponential_with_full_jitter-success.json
tests/events/exceptions/: 0101-poll_attempt_limit_reached-error.json  0201-poll_time_limit_reached-error.json
tests/events/polling/: 0101-poll-success-truthy.json  0102-poll-success-truthy.json  0201-poll-error-poll_exc-attempt_limit_reached.json  0202-poll-error-poll_exc-time_limit_reached.json  0203-poll-error-poll_exc-time_limit_reached.json  0301-poll-error-ignore_exc.json  0401-poll-error-raise_exc.json
tests/events/step/: 0101-step_constant-success.json  0201-step_exponential_backoff-success-no_jitter.json  0202-step_exponential_backoff-success-no_jitter.json  0203-step_exponential_backoff-success-no_jitter.json  0301-step_exponential_backoff-success-with_jitter.json  0302-step_exponential_backoff-success-with_jitter.json  0302-step_exponential_backoff_with_jitter-success.json
topshelfsoftware_polling/: __init__.py  backoff.py  exceptions.py  polling.py  step.py
