[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "topshelfsoftware_polling"
version = "0.1.0"
description = "Poll a target function for status"
license="MIT"
authors = [
    "Tanner Pubins <tannerp@topshelfsoftware.com>"
]
readme = "./docs/README.md"
repository = "https://github.com/topshelfsoftware/python-polling"

[tool.poetry.dependencies]
python = "^3.9"
topshelfsoftware_logging = { git = "https://github.com/topshelfsoftware/python-logging.git", tag = "v1.0.0" }

[tool.black]
line-length = 79

[tool.ruff]
line-length = 79

[tool.ruff.lint]
ignore = []
extend-select = ["C901", "E501"]
mccabe.max-complexity = 10
